# GSPCore

./: CMakeLists.txt  README.md  main.cpp
lib/: GColor.hpp  GRect.hpp  GSPCore.cpp  GSPCore.hpp  GSize.hpp  GWindowVisibility.hpp
lib/GApplication/: GApplication.cpp  GApplication.hpp
lib/GApplicationDelegate/: GApplicationDelegate.hpp
lib/GLog/: GLog.cpp  GLog.hpp
lib/GView/: GView.cpp  GView.hpp
lib/GViewCompositor/: GViewCompositor.hpp  GViewCompositorBase.hpp
lib/GViewCompositor/Direct3D/: Direct3DViewCompositor.cpp  Direct3DViewCompositor.hpp
lib/GViewCompositor/OpenGL/: OpenGLViewCompositor.cpp  OpenGLViewCompositor.hpp  glad.c  glad.h  glad_wgl.c  glad_wgl.h
lib/GViewCompositor/WebGL/: WebGLViewCompositor.cpp  WebGLViewCompositor.hpp
lib/GViewDelegate/: GViewDelegate.hpp
lib/GViewRenderer/: GViewRendererBase.hpp
lib/GWindow/: GWindow.cpp  GWindow.hpp  GWindowBase.hpp  GWindow_Win32.cpp
lib/GWindow/Wasm/: WasmGWindow.cpp  WasmGWindow.hpp  WasmWindow.cpp  WasmWindow.hpp
lib/GWindow/Win32/: Win32GWindow.cpp  Win32GWindow.hpp  Win32Window.cpp  Win32Window.hpp
lib/GWindow/X11/: X11Window.cpp  X11Window.hpp
lib/GWindowDelegate/: GWindowDelegate.hpp
lib/glad/: glad.c  glad.h
lib/glad_wgl/: glad_wgl.c  glad_wgl.h
